--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,10 @@
     <string name="car5">Ford GT</string>
     <string name="car6">BMW i4 M50</string>
     <string name="car7">Bugatti Chiron</string>
-
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="action_switch_layout">Switch Layout</string>
+    <string name="carDeatails">Car Details</string>
 
 
 </resources>
